WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294206
Fix computed value for `marker` (SVG)
https://bugs.webkit.org/show_bug.cgi?id=294206
Summary
Fix computed value for `marker` (SVG)
Ahmad Saleem
Reported
2025-06-09 09:08:35 PDT
Hi Team, Similar to
bug 294199
, it seems that we fail `computed` value in case of `marker` as well: Test Case:
https://wpt.fyi/results/svg/painting/parsing/marker-computed.svg?label=experimental&label=master&aligned
Test Case Live Link:
http://wpt.live/svg/painting/parsing/marker-computed.svg
WebKit Source:
https://searchfox.org/wubkat/rev/47cd65b85abfaf60c97296ea375c3c24e05a9b27/Source/WebCore/css/CSSProperties.json#5453
"marker": { "inherited": true, "codegen-properties": { "longhands": [ "marker-start", "marker-mid", "marker-end" ], "skip-style-extractor": true, "skip-style-extractor-comment": "FIXME: Figure out and document why this has no computed value", "parser-function": "consumeMarkerShorthand", "parser-grammar-unused": "<'marker-start'>", "parser-grammar-unused-reason": "Needs support for shorthand grammars." }, "specification": { "category": "svg", "url": "
https://www.w3.org/TR/SVG/painting.html#MarkerProperty
" } }, Same root cause: "skip-style-extractor": true, "skip-style-extractor-comment": "FIXME: Figure out and document why this has no computed value", ____ I think we can fix it - if we figure out how new automated generated code works and by removing these lines or using custom style extractor. Just raising for now to track it. Thanks!
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-06-14 02:02:08 PDT
<
rdar://problem/153373245
>
Ahmad Saleem
Comment 2
2025-06-14 02:05:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46758
Rob Buis
Comment 3
2025-09-22 08:47:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51122
EWS
Comment 4
2025-10-14 01:07:34 PDT
Committed
301462@main
(a04206ec3b04): <
https://commits.webkit.org/301462@main
> Reviewed commits have been landed. Closing PR #51122 and removing active labels.
Ahmad Saleem
Comment 5
2025-11-13 15:20:12 PST
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/56022
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug