Fix computed value for `marker` (SVG) https://bugs.webkit.org/show_bug.cgi?id=294206 rdar://153373245

Reviewed by Sam Weinig.

Align `marker` computed value with the specification [1].

[1] https://svgwg.org/svg2-draft/painting.html#MarkerShorthand

* LayoutTests/imported/w3c/web-platform-tests/css/cssom/cssom-getPropertyValue-common-checks-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/svg/painting/parsing/marker-computed-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/svg/painting/parsing/marker-computed.svg:
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/svg/painting/parsing/marker-computed-expected.txt: Removed.
* Source/WebCore/css/CSSProperties.json:
* Source/WebCore/style/StyleExtractorCustom.h:
(WebCore::Style::ExtractorCustom::extractMarkerShorthandSerialization):
(WebCore::Style::ExtractorCustom::extractMarkerShorthand):

Canonical link: https://commits.webkit.org/301462@main